Name: reflex
Version: 0.7.1.0
Synopsis: Higher-order Functional Reactive Programming
Description:
  Interactive programs without callbacks or side-effects.
  Functional Reactive Programming (FRP) uses composable events and time-varying
  values to describe interactive systems as pure functions.
  Just like other pure functional code, functional reactive code is easier
  to get right on the first try, maintain, and reuse.
  .
  Reflex is a fully-deterministic, higher-order Functional Reactive Programming
  interface and an engine that efficiently implements that interface.
  .
  <https://reflex-frp.org>
License: BSD3
License-file: LICENSE
Author: Ryan Trinkle
Maintainer: ryan.trinkle@gmail.com
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: 1.22
homepage: https://reflex-frp.org
bug-reports: https://github.com/reflex-frp/reflex/issues
extra-source-files:
  README.md
  Quickref.md
  ChangeLog.md

tested-with:
  GHC  ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1,
  GHCJS ==8.4

flag use-reflex-optimizer
  description: Use the GHC plugin Reflex.Optimizer on some of the modules in the package.  This is still experimental.
  default: False
  manual: True

flag use-template-haskell
  description: Use template haskell to generate lenses
  default: True
  manual: True

flag debug-trace-events
  description: Add instrumentation that outputs the stack trace of the definition of an event whenever it is subscribed to. Warning: It is very slow!
  default: False
  manual: True

flag fast-weak
  description: Use the primitive implementation of FastWeak in GHCJS; note that this requires GHCJS to be built with FastWeak and FastWeakBag present in the RTS, which is not the default
  default: False
  manual: True

flag debug-propagation
  description: Enable debugging of spider internals
  default: False
  manual: True

flag debug-cycles
  description: Enable debugging of event cycles
  default: False
  manual: True

flag split-these
  description: Use split these/semialign packages
  manual:      False
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    MemoTrie,
    base,
    bifunctors,
    comonad,
    constraints-extras,
    containers,
    data-default,
    dependent-map,
    exception-transformers,
    lens,
    mmorph,
    monad-control,
    mtl,
    patch,
    prim-uniq,
    primitive,
    profunctors,
    random,
    ref-tf,
    reflection,
    semigroupoids,
    stm,
    syb,
    time,
    transformers,
    unbounded-delays,
    witherable

  if flag(split-these)
    build-depends:     these,
                       semialign,
                       monoidal-containers
  else
    build-depends:     these,
                       monoidal-containers

  exposed-modules:
    Control.Monad.ReaderIO
    Data.AppendMap,
    Data.FastMutableIntMap,
    Data.FastWeakBag,
    Data.Map.Misc,
    Data.WeakBag,
    Reflex,
    Reflex.Class,
    Reflex.Adjustable.Class,
    Reflex.BehaviorWriter.Base,
    Reflex.BehaviorWriter.Class,
    Reflex.Collection,
    Reflex.Dynamic,
    Reflex.Dynamic.Uniq,
    Reflex.DynamicWriter,
    Reflex.DynamicWriter.Base,
    Reflex.DynamicWriter.Class,
    Reflex.EventWriter,
    Reflex.EventWriter.Base,
    Reflex.EventWriter.Class,
    Reflex.FastWeak,
    Reflex.FunctorMaybe,
    Reflex.Host.Class,
    Reflex.Host.Headless,
    Reflex.Network,
    Reflex.NotReady.Class,
    Reflex.PerformEvent.Base,
    Reflex.PerformEvent.Class,
    Reflex.PostBuild.Base,
    Reflex.PostBuild.Class,
    Reflex.Profiled,
    Reflex.Pure,
    Reflex.Query.Base,
    Reflex.Query.Class,
    Reflex.Requester.Base,
    Reflex.Requester.Class,
    Reflex.Spider,
    Reflex.Spider.Internal,
    Reflex.Time,
    Reflex.TriggerEvent.Base,
    Reflex.TriggerEvent.Class,
    Reflex.Widget.Basic,
    Reflex.Workflow

  reexported-modules:
    patch:Data.Functor.Misc,
    patch:Data.Patch as Reflex.Patch,
    patch:Data.Patch.Class as Reflex.Patch.Class,
    patch:Data.Patch.DMap as Reflex.Patch.DMap,
    patch:Data.Patch.DMapWithMove as Reflex.Patch.DMapWithMove,
    patch:Data.Patch.IntMap as Reflex.Patch.IntMap,
    patch:Data.Patch.Map as Reflex.Patch.Map,
    patch:Data.Patch.MapWithMove as Reflex.Patch.MapWithMove

  ghc-options: -Wall -fwarn-redundant-constraints -fwarn-tabs -funbox-strict-fields -O2 -fspecialise-aggressively

  if flag(debug-trace-events)
    cpp-options: -DDEBUG_TRACE_EVENTS
    build-depends:
      bytestring

  if flag(use-reflex-optimizer)
    cpp-options: -DUSE_REFLEX_OPTIMIZER
    build-depends: ghc
    exposed-modules: Reflex.Optimizer

  if flag(debug-propagation)
    cpp-options: -DDEBUG -DDEBUG_TRACE_PROPAGATION -DDEBUG_TRACE_INVALIDATION

  if flag(debug-cycles)
    cpp-options: -DDEBUG_CYCLES

  if flag(use-template-haskell)
    cpp-options: -DUSE_TEMPLATE_HASKELL
    build-depends:
      dependent-sum,
      haskell-src-exts,
      haskell-src-meta,
      template-haskell
    exposed-modules:
      Reflex.Dynamic.TH
    other-extensions: TemplateHaskell
  else
    build-depends:
      dependent-sum

  if flag(fast-weak) && impl(ghcjs)
    cpp-options: -DGHCJS_FAST_WEAK

  if impl(ghcjs)
    build-depends:
      ghcjs-base

source-repository head
  type: git
  location: https://github.com/reflex-frp/reflex
